Added Exception handling and Swagger annotation